Enhance Contact Page with interactive bee animation, improved layout, and updated styles as well as contact information.

--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -23,7 +23,10 @@ font-family: 'Emotion';
   font-family: 'Emotion';
 }
 
-
+#App {
+  font-family: 'Melody';
+  font-weight: 50;
+}
 
 #Mission {  
   font-family: 'Emotion';
