--- a/src/components/ShopPage.css
+++ b/src/components/ShopPage.css
@@ -16,7 +16,7 @@
 /* Header with Curved Text */
 .shop-header {
   position: relative;
-  padding: 100px 20px 140px;
+  padding: 70px 20px 140px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,51 +25,59 @@
 
 .curved-text-container {
   position: relative;
-  width: 800px;
-  height: 300px;
+  width: 2000px;
+  height: 500px;
+  overflow: visible;
+
 }
 
 .curved-text-container svg {
   width: 100%;
   height: 100%;
+  overflow: visible;
+
 }
 
 .curved-text-container text {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Parkinsans', serif;
   font-weight: 700;
-  font-size: 80px;
+  font-size: 100px;
   fill: #fff;
-  filter: drop-shadow(0 0 10px #fff);
+  font-family: Emotion;
+
 }
 
 /* Staggered Words */
 .staggered-words {
   position: relative;
-  margin-top: -60px;
+  margin-top: -160px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
+  gap: 0px;
 }
 
 .staggered-word {
-  font-family: 'Playfair Display', serif;
-  font-size: 40px;
+  font-family: 'Parkinsans', serif;
+  font-size: 100px;
   font-weight: 700;
-  filter: drop-shadow(0 0 10px #fff);
   color: #fff;
   text-transform: lowercase;
+  margin-top: -50px;
+  font-style: italic;
 }
 
 /* Slight horizontal offsets to emulate "staggered" layout */
 .word1 {
   transform: translateX(-20px);
+  margin-top: -100px;
 }
 .word2 {
-  transform: translateX(20px);
+  transform: translateX(90px);
+  margin-top: -50px;
 }
 .word3 {
-  transform: translateX(-10px);
+  transform: translateX(-100px);
 }
 
 /* Cart Button */
