Update styles and content for ContactPage, DownloadPage, Navbar, and ShopPage: enhance typography, adjust margins, and correct text for improved layout and readability

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -34,7 +34,7 @@
   font-size: 1rem;
   color: #FFFFFF;
   text-decoration: none;
-  font-family: 'CustomFont', sans-serif;
+  font-family: 'Emotions', sans-serif;
   font-weight: none;
 }
 
@@ -191,6 +191,7 @@
 
 .overlay-menu li a:hover {
   color: #947948;
+  
 }
 
 /* Responsive adjustments */
