--- a/src/components/ContactPage.css
+++ b/src/components/ContactPage.css
@@ -14,12 +14,14 @@
 }
 
 .contactpage-title {
-  font-size: 3rem;
+  font-size: 10rem;
   font-weight: bold;
-  margin-bottom: -40px;
+  margin-bottom: 40px;
+  margin-top: 50px;
   position: relative;
   z-index: 2;
-  font-family: Parkinsans, sans-serif; /* Replace with your font */
+  font-family: Emotion, sans-serif; /* Replace with your font */
+  color: #c4ae6b; 
 }
 
 .contactpage-title-background {
@@ -32,6 +34,7 @@
   z-index: -10;
   font-family: "Emotion", sans-serif; /* Replace with your font */
   animation: backgroundZoomIn 2s ease forwards;
+  visibility: hidden;
 }
 
 @keyframes backgroundZoomIn {
