--- a/src/components/DownloadPage.css
+++ b/src/components/DownloadPage.css
@@ -64,6 +64,8 @@
   font-size: 1.5vw;
   line-height: 1.4;
   text-shadow: 5px 0px 10px rgb(0, 0, 0);
+  font-weight: bolder;
+  font-family: Parkinsans;
 
   
 }
