--- a/src/components/AnimatedContentSection.css
+++ b/src/components/AnimatedContentSection.css
@@ -229,72 +229,94 @@
   }
 
   .flower-1 {
-    top: 0%;
-    left: 35%;
-    width: 60px;
-    height: 60px;
+    top: 80%;
+    left: -10%;
+    width: 200px;
+    height: 200px;
   }
 
   .flower-2 {
-    top: 15%;
+    top: 80%;
     left: 5%;
-    width: 40px;
-    height: 40px;
+    width: 200px;
+    height: 200px;
   }
 
   .flower-3 {
-    top: 30%;
-    left: 45%;
-    width: 50px;
-    height: 50px;
+    top: 55%;
+    left: -20%;
+    width: 300px;
+    height: 300px;
   }
 
   .flower-4 {
-    top: 45%;
-    left: 15%;
-    width: 100px;
-    height: 100px;
+    top: 0%;
+    left: 70%;
+    width: 200px;
+    height: 200px;
   }
 
   .flower-5 {
-    top: 15%;
-    left: 60%;
-    width: 55px;
-    height: 55px;
+    top: 40%;
+    left: -20%;
+    width: 300px;
+    height: 300px;
   }
 
   .flower-6 {
-    top: 35%;
-    left: 70%;
-    width: 45px;
-    height: 45px;
+    top: -20%;
+    left: 40%;
+    width: 400px;
+    height: 400px;
   }
 
   /* Adjust Beehives */
   .beehives-container {
-    bottom: 5%;
-    flex-direction: column;
     gap: 10px;
   }
 
   .beehive {
-    width: 90px;
-    height: 80px;
+    width: 200px;
+    height: 200px;
+    bottom: 100px;
   }
 
-  /* Adjust Beekeeper */
-  .beekeeper-container {
-    width: 180px;
-    height: 180px;
+  .beehive-1 {
+    left: -10%;
+    top: 40%;
+    width: 300px;
+    height: 300px;
+  }
+
+  .beehive-2 {
+    top: 70%;
+    left: 10%;
+    width: 200px;
+    height: 200px;
+  }
+
+  .beekeeper-container
+  {
+    width: 600px;
+    height: 600px;
+    left: 10%;
+    bottom: -30%;
+  }
+
+  .beekeeper {
+    width: 800px;
+    height: auto;
+   
   }
 
   /* Remove bee positioning since bees are removed */
   
   /* Adjust Title */
   .section-title {
-    font-size: 2rem;
+    font-size: 3rem;
     top: 15%;
     left: 5%;
+    width: 300px;
   }
 
   /* Adjust Paragraph */
@@ -304,6 +326,28 @@
     right: 5%;
     width: 200px;
   }
+
+  
+  .section-title-0 {
+    top: 80px;
+    font-size: 60px;
+    left: -0px;
+  }
+
+  .section-title-1 {
+    top: 80px;
+    font-size: 60px;
+    left: -0px;
+    width: 400px;
+  }
+
+  .section-title-2 {
+    top: 100px;
+    font-size: 60px;
+    left: 20px;
+    width: 400px;
+  }
+
 }
 
 /* Optional: Hover Effects */
