Add Condensed font and update DownloadPage styles: rename class, adjust layout, and enhance typography for improved readability

--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,13 @@ a {
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Condensed';
+  src: url('./fonts/Emotions\ Condensed\ Demo.otf') format('opentype'); /* Adjust format as needed */
+  font-weight: normal;
+  font-style: normal;
+}
+
   /*hidden scrollbar*/
 ::-webkit-scrollbar {
   display: none;
