--- a/src/components/DownloadPage.css
+++ b/src/components/DownloadPage.css
@@ -1,5 +1,5 @@
 /* DownloadPage.css (renamed from ContactPage.css if necessary) */
-.contact-page {
+.download-page {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
@@ -38,7 +38,7 @@
 
 .line {
   margin: 0;
-  font-family: Emotion, sans-serif;
+  font-family: Condensed, sans-serif;
   margin-top: 30px;
   color: #cfbb7f;
   text-shadow: 10px 10px 10px rgb(0, 0, 0);
